syntax = "proto3";

package kitchen_sink;

import "google/protobuf/timestamp.proto";

message Nested {
  int32 id = 1;
  string note = 2;
}

enum Status {
  STATUS_UNSPECIFIED = 0;
  STATUS_ACTIVE = 1;
  STATUS_SUSPENDED = 2;
}

message KitchenSink {
  int32 int32_field = 1;
  int64 int64_field = 2;
  uint64 uint64_field = 3;
  bool bool_field = 4;
  string string_field = 5;
  bytes bytes_field = 6;
  float float_field = 7;
  double double_field = 8;
  Status status = 9;
  Nested nested = 10;
  repeated Nested repeated_nested = 11;
  map<string, int32> string_to_int = 12;
  map<int32, string> int_to_string = 13;
  oneof choice {
    string name = 14;
    Nested nested_choice = 15;
  }
  google.protobuf.Timestamp timestamp = 16;
  optional int32 optional_int32 = 17;
}
